--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "peerjs --port 9000 --key peerjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
